--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 discord = "^2.3.2"
 requests = "^2.31.0"
+openai = "^1.3.4"
+langchain = "^0.0.339"
 
 
 [build-system]
