--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ openai = "^1.3.4"
 langchain = "^0.0.339"
 easyocr = "^1.7.1"
 slack-bolt = "^1.18.1"
+imageio = {extras = ["pyav"], version = "^2.33.0"}
 
 
 [build-system]
