--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ slack-bolt = "^1.18.1"
 imageio = {extras = ["pyav"], version = "^2.33.0"}
 
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.0.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
